Oops, fix test